# materialize

./: .gitignore  1c  AUTO_SCALING_SPEC.md  Cargo.toml  PERF_OPTIMIZATION_COMPLETE.md  PLAN_read_then_write_subscribe.md  PROMPT.md  agent_loop.sh  bench-ctfs.sh  ddl-perf-log.md  ddl-perf-prompt.md  pgwire-server-perf-log.md  pgwire-server-perf-prompt.md  tsoracled-plan.md
.claude/skills/adapter-guide/: SKILL.md
.claude/skills/prometheus-metrics/: SKILL.md
ci/builder/: requirements-dev.txt
demo/billing/: Cargo.toml
demo/debezium/loadgen/: Cargo.toml
demo/debezium/validate-topics/: Cargo.toml
doc/developer/design/: 20220314_persist.md  20251219_zero_downtime_upgrades_physical_isolation_high_availability.md  20260310_table_groups.md
misc/: import_gh_to_linear.py
misc/python/materialize/cli/: run.py
misc/python/materialize/mzcompose/: __init__.py
misc/python/materialize/parallel_workload/: action.py
misc/scratch/: ci-aarch64-large-disk.json  ci-aarch64-medium-disk.json
play/json-flattened-view-gen/: Cargo.toml
play/mbta/: Cargo.toml
src/adapter/: Cargo.toml  GUIDE.md
src/adapter-types/src/: dyncfgs.rs
src/adapter/src/: catalog.rs  client.rs  command.rs  coord.rs  error.rs  flags.rs  frontend_peek.rs  frontend_read_then_write.rs  lib.rs  metrics.rs  optimize.rs  peek_client.rs  session.rs  statement_logging.rs  util.rs  widget.rs
src/adapter/src/catalog/: apply.rs  builtin.rs  builtin_table_updates.rs  consistency.rs  durable_coord_state.rs  error.rs  migrate.rs  open.rs  state.rs  storage.rs  transact.rs
src/adapter/tests/: sql.rs
src/audit-log/src/: lib.rs
src/avro/: Cargo.toml
src/aws-util/: Cargo.toml
src/catalog-debug/src/: main.rs
src/catalog-protos/protos/: hashes.json  objects.proto
src/catalog-protos/src/: audit_log.rs
src/catalog/src/: builtin.rs  config.rs
src/ccsr/: Cargo.toml
src/cluster/src/: server.rs  types.rs
src/compute-client/: Cargo.toml
src/compute-client/src/: controller.rs  protocol.rs  service.rs
src/compute-types/: Cargo.toml  build.rs
src/compute-types/src/: dyncfgs.rs  sinks.proto  sinks.rs
src/compute/src/: compute_state.rs  server.rs
src/controller/src/: clusters.rs  lib.rs
src/coord/: Cargo.toml
src/coord/src/: catalog.rs  client.rs  command.rs  coord.rs  error.rs  lib.rs  persistcfg.rs  sink_connector.rs  timestamp.rs
src/dataflow/: Cargo.toml
src/dataflow-types/: Cargo.toml
src/dataflow-types/src/: client.rs  logging.rs  types.rs
src/dataflow/src/: server.rs
src/dataflowd/: Cargo.toml
src/dataflowd/src/: lib.rs
src/environmentd/: Cargo.toml
src/environmentd/src/: http.rs  lib.rs
src/expr/: Cargo.toml
src/expr-test-util/: Cargo.toml
src/expr/src/: id.proto  id.rs  lib.rs  linear.rs  relation.rs
src/http-util/: Cargo.toml
src/ingest-model/: Cargo.toml  build.rs
src/ingest-model/src/: lib.rs
src/ingestd/: Cargo.toml  build.rs
src/ingestd/ci/: .gitignore  Dockerfile  mzbuild.yml
src/ingestd/src/: ingest.rs  lib.rs  main.rs  server_metrics.rs
src/ingestd/src/ingest/: grpc.rs  mod.rs
src/interchange/: Cargo.toml
src/kafka-util/: Cargo.toml
src/lowertest/: Cargo.toml
src/materialized/: Cargo.toml
src/materialized/src/: grpc.rs  lib.rs
src/metabase/: Cargo.toml
src/mz-process-collector/: Cargo.toml
src/orchestrator-process/: Cargo.toml
src/orchestrator-process/src/: lib.rs
src/ore/: Cargo.toml
src/ore/src/: tracing.rs
src/peeker/: Cargo.toml
src/persist/: Cargo.toml  build.rs
src/persist-client/: build.rs
src/persist-client/src/: batch.rs  cfg.proto  cfg.rs  fetch.rs  lib.rs  read.rs  usage.rs
src/persist-util/: Cargo.toml
src/persist-util/src/: lib.rs  persistcfg.rs
src/pgrepr-consts/src/: oid.rs
src/pgtest/: Cargo.toml
src/pgwire/: Cargo.toml
src/pgwire-server/: Cargo.toml
src/pgwire-server-frontend/: Cargo.toml
src/pgwire-server-frontend/src/: lib.rs  mock_adapter.rs
src/pgwire-server-sunng/: Cargo.toml
src/pgwire-server-sunng/src/: lib.rs
src/pgwire-server/src/: lib.rs  mock_adapter.rs
src/pgwire/src/: codec.rs  protocol.rs
src/postgres-util/: Cargo.toml
src/prof/: Cargo.toml
src/prof/src/: jemalloc.rs
src/repr/: Cargo.toml
src/repr/src/: relation.rs
src/s3-datagen/: Cargo.toml
src/server-core/src/: lib.rs
src/sql/: Cargo.toml
src/sql-lexer/src/: keywords.txt
src/sql-parser/: Cargo.toml
src/sql-parser/src/: keywords.txt  parser.rs
src/sql/src/: catalog.rs  names.rs  normalize.rs  plan.rs  pure.rs  rbac.rs
src/sqllogictest/: Cargo.toml
src/sqllogictest/src/: runner.rs
src/stash-debug/src/: main.rs
src/stash/src/: postgres.rs
src/storage/: Cargo.toml
src/storage-client/: Cargo.toml
src/storage-client/src/: controller.rs  lib.rs  metrics.rs  persist_handles.rs  storage_collections.rs  table_worker.rs
src/storage-controller/src/: collection_mgmt.rs  lib.rs  persist_handles.rs
src/storage-types/src/: lib.rs  read_holds.rs  sources.proto  sources.rs
src/storage/src/: server.rs
src/symbiosis/: Cargo.toml
src/testdrive/: Cargo.toml
src/timestamp-oracle/: Cargo.toml  build.rs
src/timestamp-oracle/src/: batching_oracle.rs  config.rs  grpc_oracle.rs  grpc_server.rs  lib.rs  metrics.rs  postgres_oracle.rs  service.proto  service.rs
src/transform/src/: analysis.rs  dataflow.rs  join_implementation.rs  lib.rs  literal_constraints.rs  monotonic.rs  normalize_lets.rs
src/tsoracled/: Cargo.toml
src/tsoracled/src/: lib.rs
src/txn-wal/src/: txn_write.rs  txns.rs
src/walkabout/: Cargo.toml
test/: test-table-groups.sh
test/bench/kafka-sink-avro-cdcv2/: README.md  mzcompose.yml
test/chaos/: Cargo.toml
test/correctness/: Cargo.toml
test/metabase/smoketest/: Cargo.toml
test/perf-kinesis/: Cargo.toml
test/performance/perf-kinesis/: Cargo.toml
test/performance/perf-upsert/: Cargo.toml
test/performance/s3-datagen/: Cargo.toml
test/persistence/kafka-sources/: repeated-source-rendering-before.td
test/pg-cdc/: table-groups.td
test/smith/: Cargo.toml
test/test-util/: Cargo.toml
test/testdrive/: error-logging.td  kafka-avro-sources.td
(+144 files in other folders)
