[package]
name = "mz-dataflowd"
description = "Independent dataflow server for Materialize."
version = "0.0.0"
edition = "2021"
rust-version = "1.59.0"
publish = false
build = "build/main.rs"

[dependencies]
anyhow = "1.0.55"
async-trait = "0.1.52"
clap = { version = "3.1.6", features = ["derive", "env"] }
compile-time-run = "0.2.12"
futures = "0.3.21"
mz-build-info = { path = "../build-info" }
mz-dataflow = { path = "../dataflow" }
mz-dataflow-types = { path = "../dataflow-types" }
mz-persist-util = { path = "../persist-util" }
mz-persist = { path = "../persist" }
mz-ore = { path = "../ore" }
mz-repr = { path = "../repr" }
num_cpus = "1.13.1"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false, features = ["bincode"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
uuid = "0.8.2"

[build-dependencies]
anyhow = "1.0.55"
