[package]
name = "mz-pgwire-server"
description = "Minimal pgwire/SQL server extracted from environmentd"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
mz-adapter = { path = "../adapter" }
mz-repr = { path = "../repr" }
mz-authenticator = { path = "../authenticator" }
mz-build-info = { path = "../build-info" }
mz-ore = { path = "../ore", features = ["async", "metrics", "tracing"] }
mz-pgwire-common = { path = "../pgwire-common" }
mz-server-core = { path = "../server-core" }
mz-pgwire = { path = "../pgwire" }
mz-sql = { path = "../sql" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[lints]
workspace = true
