[package]
name = "mz-tsoracled"
description = "Timestamp Oracle gRPC service for Materialize."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "tsoracled"
path = "src/bin/tsoracled.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.23", features = ["wrap_help", "env", "derive"] }
mz-build-info = { path = "../build-info" }
mz-ore = { path = "../ore", features = ["cli", "async", "tracing"] }
mz-repr = { path = "../repr" }
mz-timestamp-oracle = { path = "../timestamp-oracle", features = ["grpc"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[features]
default = ["workspace-hack"]
